#0: Fix align in Drupal name (Session detail)

--- a/web/themes/da_vinci/src/sass/pages/_node-type-session.sass
+++ b/web/themes/da_vinci/src/sass/pages/_node-type-session.sass
@@ -12,7 +12,6 @@
         text-align: center
         font-weight: 600
       .field--name-field-register-drupal-name
-        text-align: right
         font-size: 0.9em
         margin-top: 0.25em
       .field--name-field-register-picture
